syntax = "proto3";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

service EchoService {
  rpc UnaryEcho(EchoRequest) returns (EchoResponse);
  rpc DuplexEcho(stream EchoRequest) returns (stream EchoResponse);
}
